--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^2.1.0",
     "expo": "~36.0.0",
+    "expo-constants": "~8.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -20,8 +21,8 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3",
-    "expo-constants": "~8.0.0"
+    "react-navigation-hooks": "^1.1.0",
+    "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
